# viperguard-ai-bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: settings.py
src/bot/moderator/: ai_analyzer.py
src/bot/services/: telegram_client.py
